--- a/styles.css
+++ b/styles.css
@@ -82,12 +82,15 @@ input#text {
         flex-direction: column;
         align-items: center;
         padding: 10px;
+        transform: scale(0.8); /* 화면을 축소 */
+        transform-origin: center; /* 축소 기준점을 왼쪽 상단으로 설정 */
     }
 
     canvas {
-        width: 60%;
-        height: auto;
-        max-width: 60%;
+        width: 100%;
+        height: 500px;
+        max-width: 100%;
+        max-height: 100%;
     }
 
     .btns {
@@ -95,10 +98,11 @@ input#text {
         flex-wrap: wrap;
         justify-content: center;
         gap: 10px;
+        
     }
 
     .btns input[type="range"] {
-        width: 30%;
+        width: 80%;
     }
 
     .color-options {
